--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,64 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   background-image: url("/background1.jpg");
-  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.container {
+  width: 80vw;
+  height: 90vh;
+  display: flex;
+}
+@layer components {
+  .chatList {
+    @apply flex-1 max-h-full;
+  }
+
+  .searchBar {
+    @apply flex items-center bg-slate-900/70 py-2.5 px-4 rounded-lg flex-1 gap-5;
+  }
+
+  .add {
+    @apply w-9 h-9 bg-slate-900/70 hover:bg-slate-900/90 p-2.5 rounded-lg cursor-pointer;
+  }
+
+  .item {
+    @apply flex items-center gap-5 p-5 cursor-pointer border-b border-gray-300/20;
+  }
+
+  .texts {
+    @apply flex flex-col gap-2.5;
+  }
+
+  .img {
+    @apply w-12 h-12 rounded-full object-cover;
+  }
+
+  input {
+    @apply bg-transparent border-none outline-none text-white flex-1;
+  }
+  /* Custom scrollbar styling */
+  .chatList::-webkit-scrollbar {
+    width: 8px; /* Make scrollbar thinner */
+  }
+
+  .chatList::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0.2); /* Light black/gray background */
+  }
+
+  .chatList::-webkit-scrollbar-thumb {
+    background-color: #1e293b; /* Darker black/gray for the thumb */
+    border-radius: 10px; /* Rounded corners for a prettier look */
+    border: 2px solid transparent; /* Space around the thumb */
+  }
+
+  .chatList::-webkit-scrollbar-thumb:hover {
+    background-color: #0f172a; /* Even darker on hover */
+  }
 }
