--- a/src/index.css
+++ b/src/index.css
@@ -22,14 +22,33 @@ body {
   height: 100vh;
 }
 
-.container {
-  width: 80vw;
-  height: 90vh;
-  display: flex;
-}
 @layer components {
+  .container {
+    height: 100%;
+  }
+
   .chatList {
-    @apply flex-1 max-h-full;
+    max-height: 100%;
+    overflow-y: auto;
+  }
+
+  /* Common styles for image elements */
+  .chatList img,
+  .img {
+    @apply w-12 h-12 rounded-full object-cover;
+  }
+
+  .chatList .texts,
+  .texts {
+    @apply flex flex-col gap-2.5;
+  }
+
+  .chatList span {
+    @apply font-extrabold;
+  }
+
+  .chatList p {
+    @apply text-sm font-normal -mt-2;
   }
 
   .searchBar {
@@ -44,33 +63,126 @@ body {
     @apply flex items-center gap-5 p-5 cursor-pointer border-b border-gray-300/20;
   }
 
-  .texts {
-    @apply flex flex-col gap-2.5;
-  }
-
-  .img {
-    @apply w-12 h-12 rounded-full object-cover;
-  }
-
   input {
     @apply bg-transparent border-none outline-none text-white flex-1;
   }
+
   /* Custom scrollbar styling */
-  .chatList::-webkit-scrollbar {
+  .chatList::-webkit-scrollbar,
+  .center::-webkit-scrollbar,
+  .photos::-webkit-scrollbar {
     width: 8px; /* Make scrollbar thinner */
   }
 
-  .chatList::-webkit-scrollbar-track {
+  .chatList::-webkit-scrollbar-track,
+  .center::-webkit-scrollbar-track,
+  .photos::-webkit-scrollbar-track {
     background: rgba(0, 0, 0, 0.2); /* Light black/gray background */
   }
 
-  .chatList::-webkit-scrollbar-thumb {
+  .chatList::-webkit-scrollbar-thumb,
+  .center::-webkit-scrollbar-thumb,
+  .photos::-webkit-scrollbar-thumb {
     background-color: #1e293b; /* Darker black/gray for the thumb */
     border-radius: 10px; /* Rounded corners for a prettier look */
     border: 2px solid transparent; /* Space around the thumb */
   }
 
-  .chatList::-webkit-scrollbar-thumb:hover {
+  .chatList::-webkit-scrollbar-thumb:hover,
+  .center::-webkit-scrollbar-thumb:hover {
     background-color: #0f172a; /* Even darker on hover */
+  }
+
+  .bottom input {
+    @apply bg-slate-900/80 m-6 px-5 py-3 rounded-md border-none outline-none text-white flex-1;
+  }
+
+  .bottom .icons {
+    @apply gap-3 cursor-pointer;
+  }
+
+  .message {
+    @apply max-w-[70%] flex gap-5;
+
+    &.own {
+      @apply ml-auto items-end;
+
+      .texts {
+        p {
+          @apply bg-purple-700 text-sm backdrop-blur-md text-white px-5 py-3 rounded-md;
+        }
+
+        span {
+          @apply text-end;
+        }
+
+        img {
+          @apply w-full h-[300px] rounded-md object-cover;
+        }
+      }
+    }
+
+    img {
+      @apply w-[30px] h-[30px] rounded-s-full object-cover;
+    }
+
+    .texts {
+      @apply flex-1 flex flex-col gap-1;
+
+      p {
+        @apply px-5 py-3 rounded-md bg-black/0 backdrop-blur-md;
+      }
+    }
+  }
+
+  .details .user img {
+    @apply w-[100px] h-[100px] rounded-full object-cover;
+  }
+
+  .info .option .title {
+    @apply flex items-center justify-between;
+  }
+
+  .photos {
+    @apply flex flex-col gap-5 mt-7 mx-3;
+  }
+
+  .photos .photoItem {
+    @apply flex items-center justify-between;
+  }
+
+  .photos .photoItem .photoDetails {
+    @apply flex items-center gap-3;
+  }
+
+  .photos .photoItem .photoDetails span {
+    @apply text-gray-300;
+  }
+
+  .photos .photoItem .photoDetails img {
+    @apply w-10 h-10 rounded-sm object-cover;
+  }
+
+  .downloadButton {
+    @apply w-6 h-6 text-gray-400 cursor-pointer;
+  }
+
+  .info button {
+    @apply mt-10 px-5 py-3 bg-red-500/50 rounded-md cursor-pointer hover:bg-red-700 transition-all ease-in-out duration-200;
+  }
+
+  .photos::-webkit-scrollbar {
+    width: 5px; /* Make scrollbar thinner */
+  }
+
+  .photos::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0.2); /* Light black/gray background */
+  }
+
+  .photos::-webkit-scrollbar-thumb {
+    background-color: #1e293b; /* Darker black/gray for the thumb */
+    border-radius: 10px; /* Rounded corners for a prettier look */
+    border: 2px solid transparent; /* Space around the thumb */
+    margin: 100px;
   }
 }
