--- a/src/index.css
+++ b/src/index.css
@@ -59,11 +59,11 @@ body {
     @apply w-9 h-9 bg-slate-900/70 hover:bg-slate-900/90 p-2.5 rounded-lg cursor-pointer;
   }
 
-  .item {
+  .chatList .item {
     @apply flex items-center gap-5 p-5 cursor-pointer border-b border-gray-300/20;
   }
 
-  input {
+  .chatList input {
     @apply bg-transparent border-none outline-none text-white flex-1;
   }
 
@@ -168,7 +168,11 @@ body {
   }
 
   .info button {
-    @apply mt-10 px-5 py-3 bg-red-500/50 rounded-md cursor-pointer hover:bg-red-700 transition-all ease-in-out duration-200;
+    @apply px-5 py-2 bg-red-500/50 rounded-md cursor-pointer hover:bg-red-700 transition-all ease-in-out duration-200;
+  }
+
+  .info .logout {
+    @apply px-5 py-2 bg-purple-500/50 rounded-md cursor-pointer hover:bg-purple-700 transition-all ease-in-out duration-200;
   }
 
   .photos::-webkit-scrollbar {
@@ -184,5 +188,41 @@ body {
     border-radius: 10px; /* Rounded corners for a prettier look */
     border: 2px solid transparent; /* Space around the thumb */
     margin: 100px;
+  }
+
+  .login h2 {
+    @apply text-4xl font-bold mb-5;
+  }
+
+  .login {
+    @apply w-full h-full flex items-center gap-5;
+  }
+
+  .login .seperator {
+    @apply h-[600px] w-[1px] bg-gray-400/50 rounded-md;
+  }
+
+  .login .item {
+    @apply flex-1 flex flex-col items-center gap-5;
+  }
+
+  .login .item form {
+    @apply flex flex-col items-center justify-center gap-5 w-full;
+  }
+
+  .login .item form label {
+    @apply items-center flex flex-col justify-center gap-1 cursor-pointer;
+  }
+
+  .login .item form img {
+    @apply rounded-full w-28 h-28 object-cover;
+  }
+
+  .login .item form input {
+    @apply px-5 py-3 w-1/2 border-none outline-none rounded-md bg-slate-900/20 text-white;
+  }
+
+  .login .item form button {
+    @apply bg-purple-600/60 w-1/2 px-5 py-3 hover:bg-purple-600/80 transition-all ease-in-out duration-150 rounded-md;
   }
 }
