--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,12 @@ body {
     height: 100%;
   }
 
+  .chatList,
+  .userInfo,
+  .details {
+    flex-shrink: 0 !important;
+  }
+
   .chatList {
     max-height: 100%;
     overflow-y: auto;
@@ -66,7 +72,6 @@ body {
   .chatList input {
     @apply bg-transparent border-none outline-none text-white flex-1;
   }
-
   /* Custom scrollbar styling */
   .chatList::-webkit-scrollbar,
   .center::-webkit-scrollbar,
@@ -224,5 +229,29 @@ body {
 
   .login .item form button {
     @apply bg-purple-600/60 w-1/2 px-5 py-3 hover:bg-purple-600/80 transition-all ease-in-out duration-150 rounded-md;
+  }
+
+  .login .item form button:disabled {
+    @apply bg-gray-500;
+  }
+
+  .addUser {
+    @apply max-h-max max-w-max p-5 bg-slate-800/90 rounded-md absolute top-0 bottom-0 left-0 right-0 m-auto z-10;
+  }
+
+  .addUser form input {
+    @apply bg-slate-900/60 px-3 py-2 rounded-sm mr-3 outline-none;
+  }
+
+  .addUser .user button {
+    @apply bg-purple-600/60 px-5 py-2 rounded-md hover:bg-purple-600/80 transition-all ease-in-out duration-150;
+  }
+
+  .addUser .user {
+    @apply flex items-center justify-between mt-5;
+  }
+
+  .addUser .user .detail {
+    @apply flex items-center gap-4;
   }
 }
