added and implemented login state chane using zustand

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,10 @@ body {
     height: 100%;
   }
 
+  .loading {
+    @apply p-12 text-2xl rounded-lg bg-slate-800/70 border border-white/20 backdrop-blur-lg text-white;
+  }
+
   .chatList,
   .userInfo,
   .details {
